@@ -141,6 +141,19 @@ Library Dependencies</a> for more information.
   </tr>
 </table>
 
+<h3>Note regarding the attributes containing email addresses</h3>
+Since ant 1.6, the attributes from, replyto, tolist, cclist, bcclist
+can contain email addresses of the form :
+<ul>
+<li>address@xyz.com</li>
+<li>name &lt;address@xyz.com&gt;</li>
+<li>&lt;address@xyz.com&gt; name</li>
+<li>(name) address@xyz.com</li>
+<li>address@xyz.com (name)</li>
+</ul>
+<p>You need to enter the angle brackets as XML entities
+<code>&amp;gt;</code> and <code>&amp;lt;</code>.</p>
+
 <h3>Parameters specified as nested elements</h3>
 
 <h4>to / cc / bcc / from/ replyto </h4>
