@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2002 The Apache Software Foundation.  All rights
+ * Copyright (c) 2002-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -57,6 +57,7 @@ package org.apache.tools.ant.taskdefs.email;
  * Holds an email address.
  *
  * @author roxspring@yahoo.com Rob Oxspring
+ * @author Michael Davey
  * @since Ant 1.5
  */
 public class EmailAddress {
@@ -72,10 +73,109 @@ public class EmailAddress {
     /**
      * Creates a new email address based on the given string
      *
-     * @param address the email address
+     * @param email the email address (with or without <>)
+     * Acceptable forms include:
+     *    address
+     *    <address>
+     *    name <address>
+     *    <address> name
+     *    (name) address
+     *    address (name)
      */
-    public EmailAddress(String address) {
-        this.address = address;
+    // Make a limited attempt to extract a sanitized name and email address
+    // Algorithm based on the one found in Ant's MailMessage.java
+    public EmailAddress(String email) {
+        final int minLen = 9;
+        int len = email.length();
+
+        // shortcut for "<address>"
+        if (len > minLen) {
+            if ((email.charAt(0) == '<' || email.charAt(1) == '<')
+            && (email.charAt(len - 1) == '>' || email.charAt(len - 2) == '>')) {
+                this.address = trim(email, true);
+                return;
+            }
+        }
+
+        int paramDepth = 0;
+        int start = 0;
+        int end = 0;
+        int nStart = 0;
+        int nEnd = 0;
+
+        for (int i = 0; i < len; i++) {
+            char c = email.charAt(i);
+            if (c == '(') {
+                paramDepth++;
+                if (start == 0) {
+                    end = i;  // support "address (name)"
+                    nStart = i + 1;
+                }
+            } else if (c == ')') {
+                paramDepth--;
+                if (end == 0) {
+                    start = i + 1;  // support "(name) address"
+                    nEnd = i;
+                }
+            } else if (paramDepth == 0 && c == '<') {
+                if (start == 0) {
+                    nEnd = i;
+                }
+                start = i + 1;
+            } else if (paramDepth == 0 && c == '>') {
+                end = i;
+                if (end != len - 1) {
+                    nStart = i + 1;
+                }
+            }
+        }
+
+        // DEBUG: System.out.println( email );
+        if (end == 0) {
+            end = len;
+        }
+        // DEBUG: System.out.println( "address: " + start + " " + end );
+        if (nEnd == 0) {
+            nEnd = len;
+        }
+        // DEBUG: System.out.println( "name: " + nStart + " " + nEnd );
+
+        this.address = trim(email.substring(start, end), true);
+        this.name = trim(email.substring(nStart, nEnd), false);
+
+        // if the two substrings are longer than the original, then name
+        // contains address - so reset the name to null
+        if (this.name.length() + this.address.length() > len) {
+            this.name = null;
+        }
+    }
+
+    /**
+     *  A specialised trim() that trims whitespace,
+     *  '(', ')', '"', '<', '>' from the start and end of strings
+     */
+    private String trim(String t, boolean trimAngleBrackets) {
+        int start = 0;
+        int end = t.length();
+        boolean trim = false;
+        do {
+            trim = false;
+            if (t.charAt(end - 1) == ')'
+                || (t.charAt(end - 1) == '>' && trimAngleBrackets)
+                || (t.charAt(end - 1) == '"' && t.charAt(end - 2) != '\\')
+                || t.charAt(end - 1) <= '\u0020') {
+                trim = true;
+                end--;
+            }
+            if (t.charAt(start) == '('
+                || (t.charAt(start) == '<' && trimAngleBrackets)
+                || t.charAt(start) == '"'
+                || t.charAt(start) <= '\u0020') {
+                trim = true;
+                start++;
+            }
+        } while (trim);
+        return t.substring(start, end);
     }
 
 
@@ -92,7 +192,7 @@ public class EmailAddress {
     /**
      * Sets the email address
      *
-     * @param address the actual email address
+     * @param address the actual email address (without <>)
      */
     public void setAddress(String address) {
         this.address = address;
