@@ -1,0 +1,141 @@
+/*
+ * The Apache Software License, Version 1.1
+ *
+ * Copyright (c) 2003 The Apache Software Foundation.  All rights
+ * reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ *
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in
+ *    the documentation and/or other materials provided with the
+ *    distribution.
+ *
+ * 3. The end-user documentation included with the redistribution, if
+ *    any, must include the following acknowlegement:
+ *       "This product includes software developed by the
+ *        Apache Software Foundation (http://www.apache.org/)."
+ *    Alternately, this acknowlegement may appear in the software itself,
+ *    if and wherever such third-party acknowlegements normally appear.
+ *
+ * 4. The names "Ant" and "Apache Software
+ *    Foundation" must not be used to endorse or promote products derived
+ *    from this software without prior written permission. For written
+ *    permission, please contact apache@apache.org.
+ *
+ * 5. Products derived from this software may not be called "Apache"
+ *    nor may "Apache" appear in their names without prior written
+ *    permission of the Apache Group.
+ *
+ * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
+ * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED.  IN NO EVENT SHALL THE APACHE SOFTWARE FOUNDATION OR
+ * ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
+ * USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+ * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
+ * OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ * ====================================================================
+ *
+ * This software consists of voluntary contributions made by many
+ * individuals on behalf of the Apache Software Foundation.  For more
+ * information on the Apache Software Foundation, please see
+ * <http://www.apache.org/>.
+ */
+
+package org.apache.tools.ant.taskdefs.email;
+
+import junit.framework.TestCase;
+
+/**
+ * @author Michael Davey
+ * @since Ant 1.6
+ */
+public class EmailAddressTest extends TestCase {
+    
+    public EmailAddressTest(String name) {
+        super(name);
+    }    
+    
+    public void setUp() { 
+    }
+    
+    public void test1() {
+        expectNameAddress( new EmailAddress("address (name)") );
+    }
+
+    public void test2() {
+        expectNameAddress( new EmailAddress("(name) address") );
+    }
+    
+    public void test3() {
+        expectNameAddress( new EmailAddress("name <address>") );
+    }
+                        
+    public void test4() {
+        expectNameAddress( new EmailAddress("<address> name") );
+    }
+    
+    public void test5() {
+        expectNameAddress( new EmailAddress("<address> (name)") );
+    }
+        
+    public void test6() {
+        expectNameAddress( new EmailAddress("(name) <address>") );
+    }
+            
+    public void test7() {
+        expectNameAddress2( new EmailAddress("address (<name>)") );
+    }
+                
+    public void test8() {
+        expectNameAddress2( new EmailAddress("(<name>) address") );
+    }
+    
+    public void test9() {
+        expectNameAddress3( new EmailAddress("address") );
+    }
+        
+    public void testA() {
+        expectNameAddress3( new EmailAddress("<address>") );
+    }
+  
+    public void testB() {
+        expectNameAddress3( new EmailAddress(" <address> ") );
+    }
+  
+    public void testC() {
+        expectNameAddress3( new EmailAddress("< address >") );
+    }
+        
+    public void testD() {
+        expectNameAddress3( new EmailAddress(" < address > ") );
+    }
+        
+    private void expectNameAddress(EmailAddress e) {
+        assertEquals( "name", e.getName() );
+        assertEquals( "address", e.getAddress() );
+    }
+    
+    // where the name contains <>
+    private void expectNameAddress2(EmailAddress e) {
+        assertEquals( "<name>", e.getName() );
+        assertEquals( "address", e.getAddress() );
+    }
+    
+    // where only an address is supplied
+    private void expectNameAddress3(EmailAddress e) {
+        assertTrue( "Expected null, found <" + e.getName() + ">",
+            e.getName() == null );
+        assertEquals( "address", e.getAddress() );
+    }
+}
